# donazopy

./: .gitignore  AGENTS.md  CHANGELOG.md  IDEA.md  PLAN.md  README.md  TODO.md  agentdb.rvf  build.sh  docs.sh  llms.txt  publish.sh  pyproject.toml  pyrightconfig.json  ruvector.db
.omc/: project-memory.json
artifacts/: doctor-external-fontlab.com-20260513T193822.bak.zone  doctor-external-fontlab.com-20260513T193928.bak.zone  doctor-external-fontlab.com-20260513T194039.bak.zone  doctor-font.ac-20260513T193056.bak.zone  doctor-font.bond-20260513T193107.bak.zone  doctor-font.ski-20260513T193614.bak.zone  doctor-fontbond.com-20260513T193119.bak.zone  doctor-fontlab.ai-20260513T193130.bak.zone  doctor-fontlab.app-20260513T193142.bak.zone  doctor-fontlab.biz-20260513T193154.bak.zone  doctor-fontlab.cc-20260513T193207.bak.zone  doctor-fontlab.co-20260513T193219.bak.zone  doctor-fontlab.dev-20260513T193231.bak.zone  doctor-fontlab.eu-20260513T193233.bak.zone  doctor-fontlab.forum-20260513T193243.bak.zone  doctor-fontlab.help-20260513T193256.bak.zone  doctor-fontlab.in-20260513T193312.bak.zone  doctor-fontlab.info-20260513T193322.bak.zone  doctor-fontlab.ltd-20260513T193332.bak.zone  doctor-fontlab.me-20260513T193343.bak.zone  doctor-fontlab.mobi-20260513T193355.bak.zone  doctor-fontlab.org-20260513T193406.bak.zone  doctor-fontlab.pro-20260513T193421.bak.zone  doctor-fontlab.ru-20260513T193432.bak.zone  doctor-fontlab.shop-20260513T193442.bak.zone  doctor-fontlab.studio-20260513T193452.bak.zone  doctor-fontlab.tv-20260513T193506.bak.zone  doctor-fontlab.us-20260513T193521.bak.zone  doctor-fontlock.com-20260513T193533.bak.zone  doctor-fontographer.info-20260513T193543.bak.zone  doctor-fontographer.net-20260513T193554.bak.zone  doctor-fontographer.org-20260513T193605.bak.zone  doctor-intellifont.com-20260513T193628.bak.zone  doctor-photofont.com-20260513T193639.bak.zone  doctor-photofont.info-20260513T193650.bak.zone  doctor-transtype.info-20260513T193700.bak.zone  doctor-typedub.com-20260513T193711.bak.zone  doctor-typetool.info-20260513T193722.bak.zone  doctor-vexy.art-20260513T193732.bak.zone  doctor-vexy.cc-20260513T193803.bak.zone  (+3 more)
docs/: 404.html  index.html  index.md  llms-full.txt  llms.txt  (+1 more)
(+104 files in other folders)
