[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "donazopy"
dynamic = ["version"]
description = "A Python CLI tool for DNS and domain-provider management."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Adam Twardoch" }]
keywords = ["dns", "domains", "zonefile", "cli"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Name Service (DNS)",
    "Typing :: Typed",
]
dependencies = [
    "dnspython>=2.6",
    "fire>=0.6",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/twardoch/donazopy"
Issues = "https://github.com/twardoch/donazopy/issues"

[project.scripts]
donazopy = "donazopy.__main__:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/donazopy/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/donazopy"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.hatch.envs.hatch-test]
dependencies = ["pytest>=8.0"]

[tool.hatch.envs.hatch-test.scripts]
run = "pytest {args:tests}"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
